Fix layout bugs

--- a/src/components/BlogPostView/blogPost.scss
+++ b/src/components/BlogPostView/blogPost.scss
@@ -148,6 +148,7 @@
             font-size: 24px;
             font-weight: 700;
             letter-spacing: -0.4px;
+            margin-right: 25px;
 
             @include device(tablet) {
                 margin-bottom: 20px;
@@ -162,13 +163,25 @@
             flex-direction: row;
             
             text-decoration: none;
-            margin-left: 45px;
+            margin-right: 45px;
+            
+            &:last-child {
+                margin: 0;
+            }
 
             svg {
                 width: 28px;
                 height: 28px;
-                margin-right: 15px;
+                margin-right: 5px;
                 fill: $font-col-primary;
+            }
+
+            @include device(phone) {
+                margin-right: 15px;
+                
+                > span {
+                    display: none;
+                }
             }
         }
     }
